# rs-accountant

./: .gitignore  Cargo.toml  Makefile  README.md
src/: engine.rs  lib.rs  main.rs
tests/: processing.rs
